# face_recognition

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
face_recognition/: UI_video_processor.py  config.py  encodings_store.py  importVideo.py  import_image.py  import_video.py  interface.py  interface_import_video.py  main.py  recognition_with_PIL.py  recognitions.py  test1.py  use_webCam.py  utils.py  verify_if_exist.py  video_processor.py
face_recognition/encodings/: kiki.txt  victorien.txt
src/face_recognition_app/: __main__.py
src/face_recognition_app/core/: utils.py
src/face_recognition_app/services/: alert_manager.py  api_server.py  camera_manager.py  camera_source.py  motion_detector.py  surveillance_engine.py  video_processor.py  video_recorder.py  webcam_capture.py
src/face_recognition_app/storage/: config.py  encodings_store.py  event_store.py  profile_store.py
src/face_recognition_app/ui/: camera_config_dialog.py  event_browser.py  image_importer.py  import_image.py  interface.py  surveillance_dashboard.py  video_importer.py
tests/: conftest.py  test_encodings_store.py
